feat: add qualified tour reviews
